Coordinate1.4/Crd/Crd/gts.cs


        public static extern short GTN_PrfFollowEx(short core,short profile,short dir);
        [DllImport("gts.dll")]
        public static extern short GTN_SetFollowMasterEx(short core,short profile,short masterIndex,short masterType,short masterItem);
        [DllImport("gts.dll")]
        public static extern short GTN_GetFollowMasterEx(short core,short profile,out short  pMasterIndex,out short  pMasterType,out short  pMasterItem);
        [DllImport("gts.dll")]
        public static extern short GTN_SetFollowLoopEx(short core, short profile, Int32 loop);
        [DllImport("gts.dll")]
        public static extern short GTN_GetFollowLoopEx(short core, short profile, out Int32 pLoop);
        [DllImport("gts.dll")]
        public static extern short GTN_SetFollowEventEx(short core, short profile, short followevent, short masterDir, Int32 pos);
        [DllImport("gts.dll")]
        public static extern short GTN_GetFollowEventEx(short core, short profile, out short pEvent, out short pMasterDir, out Int32 pPos);
        [DllImport("gts.dll")]
        public static extern short GTN_FollowSpaceEx(short core,short profile,out short  pSpace,short fifo);
        [DllImport("gts.dll")]
        public static extern short GTN_FollowDataPercentEx(short core,short profile,double masterSegment,double slaveSegment,short type,short percent,short fifo);
        [DllImport("gts.dll")]
        public static extern short GTN_FollowClearEx(short core,short profile,short fifo);
        [DllImport("gts.dll")]
        public static extern short GTN_FollowStartEx(short core, Int32 mask, Int32 option);
        [DllImport("gts.dll")]
        public static extern short GTN_FollowSwitchEx(short core, Int32 mask);
        [DllImport("gts.dll")]
        public static extern short GTN_SetFollowMemoryEx(short core,short profile,short memory);
        [DllImport("gts.dll")]
        public static extern short GTN_GetFollowMemoryEx(short core,short profile,out short  pMemory);
        [DllImport("gts.dll")]
        public static extern short GTN_GetFollowStatusEx(short core,short profile,out short  pFifoNum,out short  pSwitchStatus);
        [DllImport("gts.dll")]
        public static extern short GTN_SetFollowPhasingEx(short core,short profile,short profilePhasing);
        [DllImport("gts.dll")]
        public static extern short GTN_GetFollowPhasingEx(short core,short profile,out short  pProfilePhasing);
        [DllImport("gts.dll")]
        public static extern short GTN_FollowSwitchNowEx(short core,short profile,short method,short buffer,short fifo);
        [DllImport("gts.dll")]
        public static extern short GTN_FollowDataPercent2Ex(short core,short profile,double masterSegment,double slaveSegment,double velBeginRatio,double velEndRatio,short percent,out short  pPercent1,short fifo);
        [DllImport("gts.dll")]
        public static extern short GTN_GetFollowDataPercent2Ex(short core,double masterPos,double v1,double v2,double p,double p1,out double pSlavePos);
        [DllImport("gts.dll")]
        public static extern short GTN_FollowDoBitEx(short core,short profile,short doType,short index,short value,short fifo);
        [DllImport("gts.dll")]
        public static extern short GTN_FollowDelayEx(short core,short profile,UInt32 delayTime,short fifo);
        [DllImport("gts.dll")]
        public static extern short GTN_FollowDiBitEx(short core,short profile,short diType,short index,short value,UInt32 time,short fifo);


        public struct TMoveAbsolutePrm
        {
	        public Int32 pos;
	        public double vel;
	        public double acc;
	        public double dec;
	        public short percent;
        } 
        [DllImport("gts.dll")]
        public static extern short GT_MoveAbsolute(short profile,ref TMoveAbsolutePrm pPrm);
        [DllImport("gts.dll")]
        public static extern short GT_GetMoveAbsolute(short profile,out TMoveAbsolutePrm pPrm);
        [DllImport("gts.dll")]

        public static extern short GTN_MoveAbsolute(short core,short profile,ref TMoveAbsolutePrm pPrm);
        [DllImport("gts.dll")]
        public static extern short GTN_GetMoveAbsolute(short core,short profile,out TMoveAbsolutePrm pPrm);


        public struct  TTransformOrthogonal
        {
	        public short source;
	        public short enable;
	        public short x;
	        public short y;
	        public double theta;		// degree
        } 
        [DllImport("gts.dll")]
        public static extern short GT_SetTransformOrthogonal(short index,ref TTransformOrthogonal pOrthogonal);
        [DllImport("gts.dll")]
        public static extern short GT_GetTransformOrthogonal(short index,out TTransformOrthogonal pOrthogonal);
        [DllImport("gts.dll")]
        public static extern short GT_GetTransformOrthogonalPosition(short index,out double pPositionX,out double pPositionY);
        [DllImport("gts.dll")]
        public static extern short GTN_SetTransformOrthogonal(short core,short index,ref TTransformOrthogonal pOrthogonal);
        [DllImport("gts.dll")]
        public static extern short GTN_GetTransformOrthogonal(short core,short index,out TTransformOrthogonal pOrthogonal);
        [DllImport("gts.dll")]
        public static extern short GTN_GetTransformOrthogonalPosition(short core,short index,out double pPositionX,out double pPositionY);


        public const short HOME_STAGE_IDLE		=				(0);
        public const short HOME_STAGE_START		=			(1);

        public const short HOME_STAGE_SEARCH_LIMIT	=			(10);
        public const short HOME_STAGE_SEARCH_LIMIT_STOP	=	(11);

        public const short HOME_STAGE_SEARCH_LIMIT_ESCAPE=		(13);

        public const short HOME_STAGE_SEARCH_LIMIT_RETURN=		(15);
        public const short HOME_STAGE_SEARCH_LIMIT_RETURN_STOP=	(16);

        public const short HOME_STAGE_SEARCH_HOME=				(20);

        public const short HOME_STAGE_SEARCH_HOME_RETURN=		(25);

        public const short HOME_STAGE_SEARCH_INDEX=				(30);

        public const short HOME_STAGE_SEARCH_GPI=				(40);

        public const short HOME_STAGE_SEARCH_GPI_RETURN	=	(45);

        public const short HOME_STAGE_GO_HOME=					(80);

        public const short HOME_STAGE_END=						(100);

        public const short HOME_ERROR_NONE=						(0);
        public const short HOME_ERROR_NOT_TRAP_MODE=			(1);
        public const short HOME_ERROR_DISABLE	=				(2);
        public const short HOME_ERROR_ALARM=					(3);
        public const short HOME_ERROR_STOP=						(4);
        public const short HOME_ERROR_STAGE=					(5);
        public const short HOME_ERROR_HOME_MODE	=			(6);
        public const short HOME_ERROR_SET_CAPTURE_HOME=			(7);
        public const short HOME_ERROR_NO_HOME	=				(8);
        public const short HOME_ERROR_SET_CAPTURE_INDEX	=	(9);
        public const short HOME_ERROR_NO_INDEX	=				(10);

        public const short HOME_MODE_LIMIT	=					(10);
        public const short HOME_MODE_LIMIT_HOME	=			(11);
        public const short HOME_MODE_LIMIT_INDEX=				(12);
        public const short HOME_MODE_LIMIT_HOME_INDEX=			(13);

        public const short HOME_MODE_HOME=						(20);

        public const short HOME_MODE_HOME_INDEX	=			(22);

        public const short HOME_MODE_INDEX=						(30);

        public struct THomePrm
        {
	        public short mode;						// 回零模式
	        public short moveDir;					// 设置启动搜索时的运动方向
	        public short indexDir;					// 设置Index搜索方向
	        public short edge;						// 设置捕获沿
	        public short triggerIndex;				// 用于设置触发器
	        public short pad10;					// 保留1
            public short pad11;					// 保留1
            public short pad12;					// 保留1
	        public double velHigh;					// Home搜索速度
	        public double velLow;					// Index搜索速度
	        public double acc;
	        public double dec;
	        public short smoothTime;
	        public short pad20;					// 保留2
            public short pad21;					// 保留2
            public short pad22;					// 保留2
	        public Int32 homeOffset;				// 原点偏移
	        public Int32 searchHomeDistance;		// Home最大搜索距离，为0表示不限制
	        public Int32 searchIndexDistance;		// Index最大搜索距离，为0表示不限制
	        public Int32 escapeStep;				// 脱离步长
	        public Int32 pad31;					// 保留3
            public Int32 pad32;					// 保留3
            public Int32 pad33;					// 保留3
        } 

        public struct THomeStatus
        {
	        public short run;
	        public short stage;
	        public short error;
	        public short pad1;
	        public Int32 capturePos;
	        public Int32 targetPos;
        } 
        [DllImport("gts.dll")]
        public static extern short GT_GoHome(short axis,ref THomePrm pHomePrm);
        [DllImport("gts.dll")]
        public static extern short GT_GetHomePrm(short profile,out THomePrm pHomePrm);
        [DllImport("gts.dll")]
        public static extern short GT_GetHomeStatus(short profile,out THomeStatus pHomeStatus);
        [DllImport("gts.dll")]

        public static extern short GTN_GoHome(short core,short axis,ref THomePrm pHomePrm);
        [DllImport("gts.dll")]
        public static extern short GTN_GetHomePrm(short core,short axis,out THomePrm pHomePrm);
        [DllImport("gts.dll")]
        public static extern short GTN_GetHomeStatus(short core,short axis,out THomeStatus pHomeStatus);


        public const short PLC_THREAD_MAX=					(32);
        public const short PLC_PAGE_MAX	=				(32);
        public const short PLC_LOCAL_VAR_MAX=				(1024);
        public const short PLC_ACCESS_VAR_COUNT_MAX =       (8);

        public const short PLC_TIMER_TT	=				(0);
        public const short PLC_TIMER_TF	=				(1);
        public const short PLC_TIMER_TTF=					(2);

        public const short PLC_COUNTER_EQ=					(0);
        public const short PLC_COUNTER_LE=					(1);
        public const short PLC_COUNTER_GE=					(2);

        public const short PLC_COUNTER_EDGE_UP=				(0);
        public const short PLC_COUNTER_EDGE_DOWN=			(1);
        public const short PLC_COUNTER_EDGE_UP_DOWN=		(2);

        public const short PLC_FLANK_UP	=				(0);
        public const short PLC_FLANK_DOWN=					(1);
        public const short PLC_FLANK_UP_DOWN=				(2);

        public enum EPlcBind
        {
	        PLC_BIND_NONE,
	        PLC_BIND_DI,
	        PLC_BIND_DO,
	        PLC_BIND_TIMER,
	        PLC_BIND_COUNTER,
	        PLC_BIND_FLANK,
	        PLC_BIND_SRFF,
        } 

        public struct TVarInfo
        {
	        public short id;
	        public short dataType;
	        public string name;
        } 

        public struct TBindDi
        {
	        public short diType;
	        public short index;
	        public short reverse;
        } 

        public struct TBindDo
        {
	        public short doType;
	        public short index;
	        public short reverse;
        } 

        public struct TBindTimer
        {
	        public short timerType;
	        public Int32 delay;
	        public short inputVarId;
        } 

        public struct TBindCounter
        {
	        public short counterType;
	        public short edge;
	        public Int32 init;
	        public Int32 target;
	        public Int32 begin;
	        public Int32 end;
	        public short dir;
	        public Int32 unit;
	        public short inputVarId;
	        public short resetVarId;
        } 

        public struct TBindFlank
        {
	        public short flankType;
	        public short inputVarId;
        } 

        public struct TBindSrff
        {
	        public short setVarId;
	        public short resetVarId;
        } 

        public struct TCompileInfo
        {
	       public string pFileName;
	       public short  pLineNo;
	       public string pMessage;
        } 
